--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "build": "tsc",
-    "publish": "npm run build  npm version patch  npm publish",
+    "publish-package": "npm run build && npm version patch &&  npm publish",
     "start": "ts-node index.ts"
   },
   "author": "P-Technologies",
