--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "build": "tsc",
-    "publish-package": "npm run build && npm version major &&  npm publish",
+    "publish-package": "npm run build && npm version patch &&  npm publish",
     "start": "npm run build && openapi-sync"
   },
   "author": "P-Technologies",
