--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@redocly/openapi-core": "^1.19.0",
     "axios": "^1.7.3",
     "axios-retry": "^4.5.0",
+    "curl-generator": "^0.4.2",
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
