--- a/package.json
+++ b/package.json
@@ -4,6 +4,28 @@
   "description": "A developer-friendly tool designed to keep your API up-to-date by leveraging OpenAPI schemas. It automates the generation of endpoint URIs and type definitions, including shared types, directly from your OpenAPI specification.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.js"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts",
+      "require": "./dist/types.js",
+      "import": "./dist/types.js"
+    },
+    "./helpers": {
+      "types": "./dist/helpers.d.ts",
+      "require": "./dist/helpers.js",
+      "import": "./dist/helpers.js"
+    },
+    "./regex": {
+      "types": "./dist/regex.d.ts",
+      "require": "./dist/regex.js",
+      "import": "./dist/regex.js"
+    }
+  },
   "bin": {
     "openapi-sync": "./bin/cli.js"
   },
@@ -24,9 +46,6 @@
     "bin",
     "dist",
     "db.json",
-    "types.ts",
-    "helpers.ts",
-    "regex.ts",
     "LICENSE",
     "README.md",
     "package.json"
