--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openapi-sync",
-  "version": "2.1.9",
+  "version": "2.1.10",
   "description": "A developer-friendly tool designed to keep your API up-to-date by leveraging OpenAPI schemas. It automates the generation of endpoint URIs and type definitions, including shared types, directly from your OpenAPI specification.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -61,7 +61,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "build": "rm -rf dist && tsc",
-    "publish-package": "npm run build && npm version patch &&  npm publish",
+    "publish-package": "npm run build && npm publish",
     "start": "npm run build && openapi-sync"
   },
   "author": "P-Technologies",
