--- a/package.json
+++ b/package.json
@@ -59,10 +59,9 @@
     "url": "https://github.com/akintomiwa-fisayo/openapi-sync/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
-    "build": "rm -rf dist && tsc",
-    "publish-package": "npm run build && npm publish",
-    "start": "npm run build && openapi-sync"
+    "build-tsc": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsup index.ts --format cjs,esm --dts --clean --minify",
+    "publish-package": "npm run build && npm publish"
   },
   "author": "P-Technologies",
   "license": "ISC",
