chore: update dependencies to @apidevtools packages, add bundle analysis scripts, and adjust build configuration for source-map-explorer

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ inputed
 db.json
 openapi.sync.json
 TODO.md
+# Bundle analysis
+bundle-stats.html
+bundle-stats.json
+bundle-stats.tsv
+BUNDLE_ANALYSIS.md
