--- a/package.json
+++ b/package.json
@@ -79,5 +79,21 @@
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "yargs": "^17.7.2"
+  },
+  "peerDependencies": {
+    "zod": "^3.22.0",
+    "yup": "^1.3.0",
+    "joi": "^17.11.0"
+  },
+  "peerDependenciesMeta": {
+    "zod": {
+      "optional": true
+    },
+    "yup": {
+      "optional": true
+    },
+    "joi": {
+      "optional": true
+    }
   }
 }
