--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openapi-sync",
   "version": "4.0.0",
-  "description": "A developer-friendly tool designed to keep your API up-to-date by leveraging OpenAPI schemas. It automates the generation of endpoint URIs and type definitions, including shared types, directly from your OpenAPI specification.",
+  "description": "A powerful developer tool that automates API documentation synchronization with your codebase using OpenAPI specifications. Generates TypeScript types, endpoint definitions, runtime validation schemas (Zod, Yup, Joi), and comprehensive documentation",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -15,6 +15,12 @@
     "typescript",
     "ts",
     "dts",
+    "zod",
+    "yup",
+    "joi",
+    "validation schema",
+    "validation schema generation",
+    "validation schema generator",
     "node",
     "codegen",
     "generation",
@@ -28,31 +34,24 @@
     "dist/**/*.d.ts",
     "dist/**/*.d.mts",
     "!dist/**/*.map",
-    "db.json",
     "LICENSE",
     "README.md",
-    "package.json"
+    "package.json",
+    "!website/**/*"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/akintomiwa-fisayo/openapi-sync"
   },
-  "homepage": "https://github.com/akintomiwa-fisayo/openapi-sync#readme",
+  "homepage": "https://openapi-sync.com",
   "bugs": {
     "url": "https://github.com/akintomiwa-fisayo/openapi-sync/issues"
   },
   "scripts": {
-    "build-tsc": "rm -rf dist db.json && tsc && echo '{}' > db.json",
     "build": "rm -rf dist db.json && tsup && echo '{}' > db.json",
     "publish-package": "npm run build && npm publish",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "analyze:size": "npm run build && du -sh dist/* | sort -h",
-    "analyze:detailed": "npm run build && du -h dist/* && echo '\n📊 Total dist size:' && du -sh dist",
-    "analyze:deps": "npm list --depth=0 --production",
-    "analyze:bundle": "npm run build && node scripts/analyze-bundle.js"
+    "test:coverage": "jest --coverage"
   },
   "author": "P-Technologies",
   "license": "ISC",
